add: esempi di tag strutturali

--- a/index.html
+++ b/index.html
@@ -8,57 +8,61 @@
 <body>
     
     <!-- h1 Uno solo nella pagina -->
-    <h1>Questo è il mio titolo h1</h1>
-    <h2>Questo è il mio titolo h2</h2>
-    <h3>Questo è il mio titolo h3</h3>
-    <h4>Questo è il mio titolo h4</h4>
-    <h5>Questo è il mio titolo h5</h5>
-    <h6>Questo è il mio titolo h6</h6>
+    <div>
+        <h1>Questo è il mio titolo h1</h1>
+        <h2>Questo è il mio titolo h2</h2>
+        <h3>Questo è il mio titolo h3</h3>
+        <h4>Questo è il mio titolo h4</h4>
+        <h5>Questo è il mio titolo h5</h5>
+        <h6>Questo è il mio titolo h6</h6>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi ut dicta quo, necessitatibus tempore quisquam voluptate eum iste vitae! Distinctio animi nam ullam odio esse labore nulla omnis alias dolorum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi ut dicta quo, necessitatibus tempore quisquam voluptate eum iste vitae! Distinctio animi nam ullam odio esse labore nulla omnis alias dolorum.</p>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias dolores accusamus expedita, eaque quia earum! Assumenda voluptate nobis minima, pariatur id labore at doloremque, ad velit praesentium accusantium. Tempora, vitae.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias dolores accusamus expedita, eaque quia earum! Assumenda voluptate nobis minima, pariatur id labore at doloremque, ad velit praesentium accusantium. Tempora, vitae.</p>
+    </div>
 
     <!-- Lista non ordinata / numerata -->
-    <ul>
-        <li>
-            <h2>Titolo 1</h2>
-            Fist elem
-        </li>
-        <li>
-            <h2>Titolo 2</h2>
-            Second elem
-        </li>
-    </ul>
+    <div>
+        <ul>
+            <li>
+                <h2>Titolo 1</h2>
+                Fist elem
+            </li>
+            <li>
+                <h2>Titolo 2</h2>
+                Second elem
+            </li>
+        </ul>
 
-    <!-- Lista numerata -->
-    <ol>
-        <li>Olga</li>
-        <li>Loris</li>
-        <li>Luca</li>
-    </ol>
+        <!-- Lista numerata -->
+        <ol type="A">
+            <li>Olga</li>
+            <li>Loris</li>
+            <li>Luca</li>
+        </ol>
 
-    <!-- Liste annidate -->
-    <h2>Classi boolean</h2>
-    <ol>
-        <li>
-            <h3>Classe 1</h3>
-            <!-- Lista interna -->
-            <ul>
-                <li>Alex</li>
-                <li>Daniele</li>
-                <li>Ludovica</li>
-            </ul>
-        </li>
-        <li>
-            <h3>Classe 108</h3>
-            <!-- Lista interna -->
-            <ul>
-                <li>Pippo</li>
-                <li>Pluto</li>
-            </ul>
-        </li>
-    </ol>
+        <!-- Liste annidate -->
+        <h2>Classi boolean</h2>
+        <ol>
+            <li>
+                <h3>Classe 1</h3>
+                <!-- Lista interna -->
+                <ul>
+                    <li>Alex</li>
+                    <li>Daniele</li>
+                    <li>Ludovica</li>
+                </ul>
+            </li>
+            <li>
+                <h3>Classe 108</h3>
+                <!-- Lista interna -->
+                <ul>
+                    <li>Pippo</li>
+                    <li>Pluto</li>
+                </ul>
+            </li>
+        </ol>
+    </div>
 
     <!-- Dare importanza alle parole / frasi -->
     <p>Lorem <strong>ipsum dolor</strong> sit amet consectetur adipisicing elit. Harum tenetur illum perspiciatis. Ad, ratione cum? Quod velit quisquam <em>ipsa cumque</em> corporis natus qui facilis nam. Veniam fugit dicta molestias a?</p>
@@ -70,11 +74,22 @@
     <button>Bottone</button>
     <a href="">Link</a>
 
-    <!-- Image tag -->
+    <!-- Immagine -->
     <h2>Immagini</h2>
     <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.gASMlPqsrIt_9q8Y76PZKgHaFj%26pid%3DApi&f=1&ipt=5f1f1362dea443d7d96154c560e42d0a4167f10ad76d4f6d0df71ed3c019145b&ipo=images" alt="">
 
     <img src="img/monti-300.jpg" alt="Immagine dei monti con delle nuvole">
+
+    <!-- Tag strutturali -->
+    <div>
+        <h4>Titolo</h4>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit, accusantium? Quidem veniam dolores, quibusdam aspernatur quia velit. Nesciunt ipsum sint, mollitia nobis iusto, in quidem possimus, sequi omnis a natus.</p>
+    </div>
+
+    <!-- Tag br -->
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, perspiciatis velit iure, <br> maxime similique ad quos nobis minus hic voluptate quam repellat, <br> voluptatem officia porro quidem consequatur alias eos at.</p>
+
+
 
 </body>
 </html>
